[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "DRAG"
version = "0.1.0"
description = "Document Retrieval and Generation (DRAG) - A query-focused document summarization system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Osiris Terry", email = "osiris.terry.4@au.af.edu"}
]
dependencies = [
    "nltk==3.9.2",
    "numpy==2.0.2",
    "onnxruntime==1.19.2",
    "tokenizers==0.22.2",
    "faiss-cpu==1.13.0",
]

[tool.setuptools]
packages = ["DRAG", "DRAG.database", "DRAG.nlp", "DRAG.nlp.models"]

[tool.setuptools.package-data]
"drag.nlp.models" = [
    "all-MiniLM-L6-v2-onnx/*.onnx",
    "all-MiniLM-L6-v2-onnx/*.json",
    "bge-reranker-onnx/*.onnx",
    "bge-reranker-onnx/*.json",
    "nltk/*.json",
    "nltk/data/tokenizers/punkt/PY3/*",
    "nltk/data/tokenizers/punkt_tab/english/*",
]
